<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/appLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgDescription"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_appicon" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/EBSelfCare"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtTxtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="40dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtTxtAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtUser"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="10dp"
        android:hint="@string/account_number"
        android:importantForAutofill="no"
        android:inputType="number|phone"
        android:minHeight="48dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTxtAcc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

</RelativeLayout>